Fix unit being too narrow for Golden Cord after border-box.

--- a/app/components/Stanzas/Unit/style.scss
+++ b/app/components/Stanzas/Unit/style.scss
@@ -43,7 +43,7 @@
      * This is necessary for Vegan Proclamation. This value doesn't affect
      * the layout anywhere else. This is also wide enough for Golden Cord.
      */
-    max-width: 700px;
+    max-width: 710px;
 }
 
 .Unit__column__main {
